fixed parsing issue with bracket templates